renaming image files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <title>R.S.V.P</title>
-        <!--<link rel="stylesheet" href="" type="styles/reset.css" type="text/css" />-->
+        <link rel="stylesheet" href="type="styles/reset.css" type="text/css" />
         <link rel="stylesheet" href="styles/main.css" type="text/css" />
     </head>
     <body>
