--- a/index.html
+++ b/index.html
@@ -1,85 +1,13 @@
 <!DOCTYPE html>
-<html>
-<<<<<<< HEAD
-    <head>
-        <title>R.S.V.P</title>
-    </head>
-    <body>
-        <div>
-  <h1> Team R.S.V.P</h1>
-</div>
-<div class="johnthan">
-  <h2>Jonathan</h2>
-  <p>I like symmetry.
-I like cars, design, and music.
-I like being active.
-</p>
-  <p></p>
-  <p></p>
-  <p></p>
-</div>
-<div class="keala">
-  <h2>keala</h2>
-  <p>I like playing squash, swimming, and other random sports.
-I’m into all the performing arts.
-My favorite animal is the portuguese man o’ war.
-
-</p>
-  <p></p>
-  <p></p>
-  <p></p>
-</div>
-<div class="josh">
-  <h2>Josh</h2>
-  <p> I like dogs
-I don’t mess with spiders.
-I like fried chicken.
-</p>
-  <p></p>
-  <p></p>
-  <p></p>
-</div>
-<div class="sean">
-  <h2>sean</h2>
-  <p>I like technology.
-I like games
-I like friends.
-</p>
-  <p></p>
-  <p></p>
-  <p></p>
-</div>
- <div class="container">
-    <img src="#" class="heros">
-      <div class="overlay">
-        <div class="text"> I like symmetry.
-I like cars, design, and music.
-I like being active.</div>
-      </div>
-    </div>
-
-<!--<div class="hq">-->
-<!--  <h2>HQ</h2>-->
-<!--  <p>Derek</p>-->
-<!--  <p>Briana</p>-->
-<!--  <p>Kallatt</p>-->
-<!--  <p>Eden</p>-->
-<!--</div>-->
-        <!--<h2>-->
-        <!--   Congratulations you played yourself-->
-
-
-        <!--</h2>-->
-    </body>
-=======
+<html></html>
 
 <head>
     <title>R.S.V.P</title>
-        <!--<link rel="stylesheet" href="" type="styles/reset.css" type="text/css" />-->
+        <link rel="stylesheet" href="styles/style.css" type="text/css"/>
         <link rel="stylesheet" href="styles/main.css" type="text/css" />
 </head>
 
-<body>
+<body class = "home">
     <header>
     <h1>R.S.V.P</h1>
     </header>
@@ -94,9 +22,9 @@ I like being active.</div>
         <div class="keala">
         <h2>keala</h2>
         <ul>
-            <li> like playing squash, swimming, and other random sports.</li>
+            <li> like playing squash and swimming</li>
             <li> I'm into all the performing arts.</li>
-            <li> My favorite animal is the portuguese man o' war.</li>
+            <li> Favorite animal is the portuguese man o' war.</li>
         </ul></div>
         <div class="sean">
         <h2>Sean</h2>
@@ -116,5 +44,4 @@ I like being active.</div>
     </main>
 </body>
 
->>>>>>> Save This
 </html>
