--- a/index.html
+++ b/index.html
@@ -1,73 +1,94 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>R.S.V.P</title>
-    </head>
-    <body>
-        <div>
-  <h1> Team R.S.V.P</h1>
-</div>
-<div class="johnthan">
-  <h2>Jonathan</h2>
-  <p>I like symmetry.
-I like cars, design, and music.
-I like being active.
-</p>
-  <p></p>
-  <p></p>
-  <p></p>
-</div>
-<div class="keala">
-  <h2>keala</h2>
-  <p>I like playing squash, swimming, and other random sports.
-I’m into all the performing arts.
-My favorite animal is the portuguese man o’ war.
 
-</p>
-  <p></p>
-  <p></p>
-  <p></p>
-</div>
-<div class="josh">
-  <h2>Josh</h2>
-  <p> I like dogs
-I don’t mess with spiders.
-I like fried chicken.
-</p>
-  <p></p>
-  <p></p>
-  <p></p>
-</div>
-<div class="sean">
-  <h2>sean</h2>
-  <p>I like technology.
-I like games
-I like friends.
-</p>
-  <p></p>
-  <p></p>
-  <p></p>
-</div>
- <div class="container">
-    <img src="#" class="heros">
-      <div class="overlay">
-        <div class="text"> I like symmetry.
-I like cars, design, and music.
-I like being active.</div>
-      </div>
+<head>
+  <title>R.S.V.P</title>
+  <link rel="stylesheet" href="styles/style.css" type="text/css" />
+   <link rel="stylesheet" href="styles/main.css" type="text/css" />
+</head>
+
+<body>
+  <div>
+    <h1> Team R.S.V.P</h1>
+  </div>
+  <div class="johnthan">
+    <h2>Jonathan</h2>
+      <p>I like symmetry.
+    I like cars, design, and music.
+    I like being active.
+    </p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <div class="keala">
+    <h2>keala</h2>
+    <p>I like playing squash, swimming, and other random sports. I’m into all the performing arts. My favorite animal is the portuguese man o’ war.
+
+    </p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <div class="josh">
+    <h2>Josh</h2>
+    <p> I like dogs I don’t mess with spiders. I like fried chicken.
+    </p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <div class="sean">
+    <h2>sean</h2>
+    <p>I like technology. I like games I like friends.
+    </p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+  <div class="container johnthan">
+    <img src="images/killer.jpeg" class="heros">
+    <div class="overlay">
+      <div class="text"> I like symmetry. I like cars, design, and music. I like being active.</div>
     </div>
+  </div>
+  
+  <div class="container josh">
+    <img src="images/naruto.jpg" class="heros">
+    <div class="overlay">
+      <div class="text"> I like symmetry. I like cars, design, and music. I like being active.</div>
+    </div>
+  </div>
+  
+  <div class="container keala">
+    <img src="images/foxy.jpeg" class="heros">
+    <div class="overlay">
+      <div class="text"> keala text here.</div>
+    </div>
+  </div>
+  
+  <div class="container sean">
+    <img src="images/giphy.gif" class="heros">
+    <div class="overlay">
+      <div class="text"> sean text here .</div>
+    </div>
+  </div>
+  
+  
+  
+    
+  <!--<div class="hq">-->
+  <!--  <h2>HQ</h2>-->
+  <!--  <p>Derek</p>-->
+  <!--  <p>Briana</p>-->
+  <!--  <p>Kallatt</p>-->
+  <!--  <p>Eden</p>-->
+  <!--</div>-->
+  <!--<h2>-->
+  <!--   Congratulations you played yourself-->
 
-<!--<div class="hq">-->
-<!--  <h2>HQ</h2>-->
-<!--  <p>Derek</p>-->
-<!--  <p>Briana</p>-->
-<!--  <p>Kallatt</p>-->
-<!--  <p>Eden</p>-->
-<!--</div>-->
-        <!--<h2>-->
-        <!--   Congratulations you played yourself-->
 
+  <!--</h2>-->
+</body>
 
-        <!--</h2>-->
-    </body>
 </html>
