i fixed some code

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-    <title>R.S.V.P</title> jonathan
-    <link rel="stylesheet" href="styles/main.css" type="text/css" />
+    <title>R.S.V.P</title>
+    <link rel="stylesheet" href="" type="styles/reset.css" type="text/css" />
     <link rel="stylesheet" href="styles/style.css" type="text/css" />
+
 </head>
 
 <body class="home">
@@ -35,11 +36,11 @@
             </ul>
         </div>
         <div class="keala">
-            <h2>keala</h2>
+            <h2>Keala</h2>
             <ul>
-                <li> like playing squash and swimming</li>
+                <li> Like playing squash and swimming</li>
                 <li> I'm into all the performing arts.</li>
-                <li> Favorite animal is the portuguese man o' war.</li>
+                <li> Adores the portuguese man o' war.</li>
             </ul>
         </div>
         <div class="sean">
@@ -50,13 +51,17 @@
                 <li> I like friends.</li>
             </ul>
         </div>
-        <div class="jonathan">
+        <div class="johnthan">
             <h2>Jonathan</h2>
             <ul>
                 <li> I like symmetry.</li>
                 <li> I like cars, design, and music.</li>
                 <li> I like being active.</li>
             </ul>
+        </div>
+        <div class="qoute">
+        <h2>Qoute</h2>
+        <p>Congratulations..you played yourself</p>
         </div>
     </main>
     <footer class="footer">
