--- a/index.html
+++ b/index.html
@@ -2,52 +2,60 @@
 <html>
 
 <head>
-    <title>R.S.V.P</title> jonathan
-        <link rel="stylesheet" href="" type="styles/reset.css" type="text/css" />
-        <link rel="stylesheet" href="styles/style.css" type="text/css" />
+    <title>R.S.V.P</title>
+    <link rel="stylesheet" href="" type="styles/reset.css" type="text/css" />
+    <link rel="stylesheet" href="styles/style.css" type="text/css" />
 
 </head>
 
-<body class = "home">
+<body class="home">
     <header>
-    <nav>
+        <nav>
             <ul class="navbar">
-               <li class="nav"><a class="a" href="index.html">Home</a></li>
+                <li class="nav"><a class="a" href="index.html">Home</a></li>
                 <li class="nav"><a class="a" href="music.html">About</a></li>
                 <li class="nav"><a class="a" href="page2.html">them</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div class = "josh">
-        <h2>Josh</h2>
-        <ul>
-            <li> Games</li>
-            <li> Hanging out with friends</li>
-            <li> Watching movies</li>
-        </ul></div>
+        <div class="josh">
+            <h2>Josh</h2>
+            <ul>
+                <li> Games</li>
+                <li> Hanging out with friends</li>
+                <li> Watching movies</li>
+            </ul>
+        </div>
         <div class="keala">
-        <h2>keala</h2>
-        <ul>
-            <li> like playing squash and swimming</li>
-            <li> I'm into all the performing arts.</li>
-            <li> Favorite animal is the portuguese man o' war.</li>
-        </ul></div>
+            <h2>Keala</h2>
+            <ul>
+                <li> Like playing squash and swimming</li>
+                <li> I'm into all the performing arts.</li>
+                <li> Adores the portuguese man o' war.</li>
+            </ul>
+        </div>
         <div class="sean">
-        <h2>Sean</h2>
-        <ul>
-            <li> I like games</li>
-            <li> I like technology</li>
-            <li> I like friends.</li>
-        </ul></div>
+            <h2>Sean</h2>
+            <ul>
+                <li> I like games</li>
+                <li> I like technology</li>
+                <li> I like friends.</li>
+            </ul>
+        </div>
         <div class="johnthan">
-        <h2>Jonathan</h2>
-        <ul>
-            <li> I like symmetry.</li>
-            <li> I like cars, design, and music.</li>
-            <li> I like being active.</li>
-        </ul>
+            <h2>Jonathan</h2>
+            <ul>
+                <li> I like symmetry.</li>
+                <li> I like cars, design, and music.</li>
+                <li> I like being active.</li>
+            </ul>
+        </div>
+        <div class="qoute">
+        <h2>Qoute</h2>
+        <p>Congratulations..you played yourself</p>
         </div>
     </main>
 </body>
+
 </html>
