--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
             <ul class="navbar">
                <li class="nav"><a class="a" href="index.html">Home</a></li>
-                <li class="nav"><a class="a" href="music.html">About</a></li>
+                <li class="nav"><a class="a" href="about.html">About</a></li>
                 <li class="nav"><a class="a" href="page2.html">them</a></li>
             </ul>
         </nav>
