add navbar and footer

--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
         <nav>
             <ul class="navbar">
                 <li class="nav"><a class="a" href="index.html">Us</a></li>
-                <li class="nav"><a class="a" href="music.html">About</a></li>
-                <li class="nav"><a class="a" href="page2.html">More</a></li>
+                <li class="nav"><a class="a" href="about.html">About</a></li>
+                <li class="nav"><a class="a" href="#">More</a></li>
                 <li id="icon" class="icon">
                     <button>
                     &#9776
@@ -27,8 +27,13 @@
     <main>
 
     </main>
-
-    <footer></footer>
+    <footer class="footer">
+  <a href="#">Twitter</a>
+  <a href="#">Facebook</a>
+  <a href="#">Snapchat</a>
+  
+    </footer>
+    <script type="text/javascript" src="js/nav.js"></script>
 </body>
 
 </html>
