--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body class="home">
     <header>
         <nav>
-            <ul class="navbar">
+            <ul class="navbar" id="myTopNav">
                 <li class="nav"><a class="a" href="index.html">Us</a></li>
-                <li class="nav"><a class="a" href="music.html">About</a></li>
-                <li class="nav"><a class="a" href="page2.html">More</a></li>
+                <li class="nav"><a class="a" href="about.html">About</a></li>
+                <li class="nav"><a class="a" href="#">More</a></li>
                 <li id="icon" class="icon">
                     <button>
                     &#9776
@@ -56,6 +56,13 @@
             </ul>
         </div>
     </main>
+    <footer class="footer">
+  <a href="#">Twitter</a>
+  <a href="#">Facebook</a>
+  <a href="#">Snapchat</a>
+  
+</footer>
+<script type="text/javascript" src="js/nav.js"></script>
 </body>
 
 </html>
