fix most positioning

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <h2>Qoute</h2>
         <p>Congratulations..you played yourself</p>
         </div>
+        <img src="images/coderspace.jpg" alt="Coder Space">
     </main>
     <footer class="footer">
   <a href="#">Twitter</a>
