--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <h2>Qoute</h2>
         <p>Congratulations..you played yourself</p>
         </div>
+        <img src="images/coderspace.jpg" alt="Coder Space">
     </main>
 </body>
 
