--- a/pictures.html
+++ b/pictures.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> </title>
+    <title>Janiya Was Here </title>
     <link rel="stylesheet" href="" type="styles/reset.css" type="text/css" />
     <link rel="stylesheet" href="styles/style.css" type="text/css" />
 
@@ -10,34 +10,35 @@
 
 <body class="pictures">
     <main>
-        <div class="container">
-            <img src="images/killer.jpeg" class="heros">
-            <div class="overlay">
-                <div class="text"> I like symmetry. I like cars, design, and music. I like being active.
+        <div class="images">
+            <div class="container">
+                <img src="images/john.jpg" class="heros">
+                <div class="overlay">
+                    <div class="text"> I like symmetry.<br> I like cars, design, and music.<br> I like being active.
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <img src="images/foxy.jpeg" class="heros">
-            <div class="overlay">
-                <div class="text">I like playing squash, swimming, and other random sports. I’m into all the performing arts. My favorite animal is the portuguese man o’ war.
+            <div class="container">
+                <img src="images/foxy.jpeg" class="heros">
+                <div class="overlay">
+                    <div class="text">I like playing squash, swimming,and <br>other random sports. I'm into all <br>the performing arts. <br>My favorite animal is <br>the portuguese man o' war.
 
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <img src="images/naruto.jpg" class="heros">
+                <div class="overlay">
+                    <div class="text"> I like dogs I don't mess with spiders. <br>I like fried chicken. <br>I like games.<br> I like technology.<br> I like friends.<br> My Hero Academia</div>
+                </div>
+            </div>
+            <div class="container">
+                <img src="images/sean.jpg" class="heros">
+                <div class="overlay">
+                    <div class="text"> I like games. I like technology.<br>I like to code.
                 </div>
             </div>
         </div>
-        <div class="container">
-            <img src="images/naruto.jpg" class="heros">
-            <div class="overlay">
-                <div class="text"> I like dogs I don’t mess with spiders. <br>I like fried chicken. <br>I like games.<br> I like technology.<br> I like friends.<br> My Hero Academia</div>
-            </div>
-        </div>
-        <div class="container">
-            <img src="images/giphy.gif" class="heros">
-            <div class="overlay">
-                <div class="text"> I like dogs I don’t mess with spiders. I like fried chicken. I like games. I like technology. I like friends. My Hero Academia</div>
-            </div>
-        </div>
-        
 </body>
 
 </html>
