--- a/pictures.html
+++ b/pictures.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="container">
-                <img src="images/foxy.jpeg" class="heros">
+                <img src="images/keala.jpg" class="heros">
                 <div class="overlay">
                     <div class="text">I like playing squash, swimming,and <br>other random sports. I'm into all <br>the performing arts. <br>My favorite animal is <br>the portuguese man o' war.
 
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="container">
-                <img src="images/naruto.jpg" class="heros">
+                <img src="images/joush.jpg" class="heros">
                 <div class="overlay">
                     <div class="text"> I like dogs I don't mess with spiders. <br>I like fried chicken. <br>I like games.<br> I like technology.<br> I like friends.<br> My Hero Academia</div>
                 </div>
