--- a/pictures.html
+++ b/pictures.html
@@ -14,14 +14,14 @@
             <div class="container">
                 <img src="images/john.jpg" class="heros">
                 <div class="overlay">
-                    <div class="text"> I like symmetry.<br> I like cars, design, and music.<br> I like being active.
+                    <div class="text"> In abundance of water<br> only a foolish men goes thirsty 
                     </div>
                 </div>
             </div>
             <div class="container">
                 <img src="images/keala.jpg" class="heros">
                 <div class="overlay">
-                    <div class="text">I like playing squash, swimming,and <br>other random sports. I'm into all <br>the performing arts. <br>My favorite animal is <br>the portuguese man o' war.
+                    <div class="text">A men isn't a men <br>unless he can keep <br> a roof on is head
 
                     </div>
                 </div>
@@ -29,13 +29,13 @@
             <div class="container">
                 <img src="images/joush.jpg" class="heros">
                 <div class="overlay">
-                    <div class="text"> I like dogs I don't mess with spiders. <br>I like fried chicken. <br>I like games.<br> I like technology.<br> I like friends.<br> My Hero Academia</div>
+                    <div class="text"> carpe di dl , carpe futurum</div>
                 </div>
             </div>
             <div class="container">
                 <img src="images/sean.jpg" class="heros">
                 <div class="overlay">
-                    <div class="text"> I like games. I like technology.<br>I like to code.
+                    <div class="text">life is a game <br> and I'm just a player
                 </div>
             </div>
         </div>
