add footer and nav to all pages

--- a/pictures.html
+++ b/pictures.html
@@ -8,13 +8,33 @@
 
 </head>
 
+
 <body class="pictures">
+    <header>
+        <nav>
+            <ul class="navbar">
+
+
+                <li class="nav"><a class="a" href="index.html">Us</a></li>
+                <li class="nav"><a class="a" href="about.html">About</a></li>
+                <li class="nav"><a class="a" href="pictures.html">more</a></li>
+                <li id="icon" class="icon">
+                    <button>
+                    &#9776
+                    </button>
+
+                </li>
+
+            </ul>
+        </nav>
+    </header>
+
     <main>
         <div class="images">
             <div class="container">
                 <img src="images/john.jpg" class="heros">
                 <div class="overlay">
-                    <div class="text"> In abundance of water<br> only a foolish men goes thirsty 
+                    <div class="text"> In abundance of water<br> only a foolish men goes thirsty
                     </div>
                 </div>
             </div>
@@ -36,9 +56,16 @@
                 <img src="images/sean.jpg" class="heros">
                 <div class="overlay">
                     <div class="text">life is a game <br> and I'm just a player
+                    </div>
                 </div>
             </div>
-        </div>
+            <footer class="footer">
+                <a href="#">Twitter</a>
+                <a href="#">Facebook</a>
+                <a href="#">Snapchat</a>
+
+            </footer>
+            <script type="text/javascript" src="js/nav.js"></script>
 </body>
 
 </html>
