--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
                 <li class="nav"><a class="a" href="index.html">Us</a></li>
                 <li class="nav"><a class="a" href="about.html">About</a></li>
-                <li class="nav"><a class="a" href="#">More</a></li>
+                <li class="nav"><a class="a" href="pictures.html">more</a></li>
                 <li id="icon" class="icon">
                     <button>
                     &#9776
