--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>R.S.V.P</title> jonathan
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.jpeg">
     <link rel="stylesheet" href="styles/main.css" type="text/css" />
     <link rel="stylesheet" href="styles/style.css" type="text/css" />
 </head>
