--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         <h2>Qoute</h2>
         <p>Congratulations..you played yourself</p>
         </div>
+        <div class="cs-images">
         <img src="images/coderspace.jpg" alt="Coder Space">
+        </div>
     </main>
     <footer class="footer">
   <a href="#">Twitter</a>
