--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>R.S.V.P</title> jonathan
+    <title>R.S.V.P</title> 
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.jpeg">
     <link rel="stylesheet" href="styles/main.css" type="text/css" />
 
@@ -18,7 +18,7 @@
             <ul class="navbar" id="myTopNav">
                 <li class="nav"><a class="a" href="index.html">Us</a></li>
                 <li class="nav"><a class="a" href="about.html">About</a></li>
-                <li class="nav"><a class="a" href="#">More</a></li>
+                <li class="nav"><a class="a" href="pictures.html">More</a></li>
                 <li id="icon" class="icon">
                     <button>
                     &#9776
