Revert "Revert "added team picture and changed background color""

--- a/pictures.html
+++ b/pictures.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Janiya Was Here </title>
+    <title>RSVP</title>
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.jpeg">
     <link rel="stylesheet" href="" type="styles/reset.css" type="text/css" />
     <link rel="stylesheet" href="styles/style.css" type="text/css" />
@@ -31,6 +31,7 @@
     </header>
 
     <main>
+        <img class="teamphoto" src="images/teamphoto.jpg"></img>
         <div class="images">
             <div class="container">
                 <img src="images/john.jpg" class="heros">
