--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>R.S.V.P</title> jonathan
+    <title>R.S.V.P</title>
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.jpeg">
     <link rel="stylesheet" href="styles/main.css" type="text/css" />
 
