--- a/pictures.html
+++ b/pictures.html
@@ -61,13 +61,14 @@
                     </div>
                 </div>
             </div>
-           
-            <script type="text/javascript" src="js/nav.js"></script>
-</body>
- <footer class="footer">
+            </main>
+        <footer class="footer">
                 <a href="#">Twitter</a>
                 <a href="#">Facebook</a>
                 <a href="#">Snapchat</a>
 
-            </footer>
+            </footer>    
+            <script type="text/javascript" src="js/nav.js"></script>
+</body>
+
 </html>
