--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
         <nav>
             <ul class="navbar" id="myTopNav">
-                <li class="nav"><a class="a" href="index.html">Us</a></li>
+                <li class="nav"><a class="a" href="index.html">Home</a></li>
                 <li class="nav"><a class="a" href="about.html">About</a></li>
-                <li class="nav"><a class="a" href="#">More</a></li>
+                <li class="nav"><a class="a" href="pictures.html">More</a></li>
                 <li id="icon" class="icon">
                     <button>
                     &#9776
