--- a/pictures.html
+++ b/pictures.html
@@ -16,7 +16,7 @@
             <ul class="navbar">
 
 
-                <li class="nav"><a class="a" href="index.html">Us</a></li>
+                <li class="nav"><a class="a" href="index.html">Home</a></li>
                 <li class="nav"><a class="a" href="about.html">About</a></li>
                 <li class="nav"><a class="a" href="pictures.html">more</a></li>
                 <li id="icon" class="icon">
