--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <title>R.S.V.P</title>
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.jpeg">
-    <link rel="stylesheet" href="styles/main.css" type="text/css" />
 
     <link rel="stylesheet" href="styles/style.css" type="text/css" />
 
@@ -36,6 +35,11 @@
                 <li> Hanging out with friends</li>
                 <li> Watching movies</li>
             </ul>
+            <h2>Values</h2>
+            <p> Cute animals </p>
+            <h2>Favorite song</h2>
+            <p>Mister Glassman</p>
+            <p>By: Scotty Sire</p>
         </div>
         <div class="keala">
             <h2>Keala</h2>
@@ -44,6 +48,11 @@
                 <li> I'm into all the performing arts.</li>
                 <li> Adores the portuguese man o' war.</li>
             </ul>
+            <h2>Values</h2>
+            <p> Art and creativity </p>
+            <h2>Favorite song</h2>
+            <p>Dies irae</p>
+            <p>By: Karl Jenkins & Adiemus</p>
         </div>
         <div class="sean">
             <h2>Sean</h2>
@@ -52,6 +61,11 @@
                 <li> I like technology</li>
                 <li> I like friends.</li>
             </ul>
+            <h2>Values</h2>
+            <p> Games and meeting new people </p>
+            <h2>Favorite Song</h2>
+            <p>Element</p>
+            <p>By: Kendrick Lamar</p>
         </div>
         <div class="johnthan">
             <h2>Jonathan</h2>
@@ -60,14 +74,19 @@
                 <li> I like cars, design, and music.</li>
                 <li> I like being active.</li>
             </ul>
+            <h2> Value </h2>
+            <p> Passing on knowledge </p>
+            <h2>Favorite song</h2>
+            <p>Art of peer pressure</p>
+            <p>By: Kendrick Lamar</p>
         </div>
-        <div class="qoute">
-        <h2>Qoute</h2>
-        <p>Congratulations..you played yourself</p>
-        </div>
-        <div class="cs-images">
-        <img src="images/coderspace.jpg" alt="Coder Space">
-        </div>
+        <!--<div class="quote">-->
+        <!--<h2>Quote</h2>-->
+        <!--<p>Congratulations..you played yourself</p>-->
+        <!--</div>-->
+        <!--<div class="cs-images">-->
+        <!--<img src="images/coderspace.jpg" alt="Coder Space">-->
+        <!--</div>-->
     </main>
     <footer class="footer">
   <a href="#">Twitter</a>
