--- a/pictures.html
+++ b/pictures.html
@@ -36,14 +36,14 @@
             <div class="container">
                 <img src="images/john.jpg" class="heros">
                 <div class="overlay">
-                    <div class="text"> In abundance of water<br> only a foolish men goes thirsty
+                    <div class="text"> In abundance of water<br> only a foolish man goes thirsty
                     </div>
                 </div>
             </div>
             <div class="container">
                 <img src="images/keala.jpg" class="heros">
                 <div class="overlay">
-                    <div class="text">A men isn't a men <br>unless he can keep <br> a roof on is head
+                    <div class="text">A man isn't a man <br>unless he can keep <br> a roof on his head
 
                     </div>
                 </div>
@@ -51,7 +51,7 @@
             <div class="container">
                 <img src="images/joush.jpg" class="heros">
                 <div class="overlay">
-                    <div class="text"> carpe di dl , carpe futurum</div>
+                    <div class="text"> carpe diem carpe futurum</div>
                 </div>
             </div>
             <div class="container">
