--- a/about.html
+++ b/about.html
@@ -34,18 +34,23 @@
 
         <div class="slideshow-container">
 
+<div  class="video" >
             <div class="mySlides fade">
-                <img src="https://images-na.ssl-images-amazon.com/images/I/810s6el6lYL._SL1500_.jpg" style="width:100%">
+                <iframe width="546" height="409" src="https://www.youtube.com/embed/wAUAJBp3Kp8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
             </div>
 
+<div  class="video" >
             <div class="mySlides fade">
-                <img src="https://s7d2.scene7.com/is/image/dkscdn/16WILUWLSNLTHRFTBFTB_is" style="width:100%">
+                <h1>"Congratulations... You've played yourself"</h1>
             </div>
-
+</div>
+<div  class="video" >
             <div class="mySlides fade">
-                <img src="https://images-na.ssl-images-amazon.com/images/I/61F-Epj6A9L._SX355_.jpg" style="width:100%">
+                <h1>Leave no man behind. <br>One band, one sound.<br> 
+          Improvement is always needed.</h1>
             </div>
-
+</div>
         </div>
         <br>
 
