--- a/pictures.html
+++ b/pictures.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css" type="text/css" />
 
 </head>
-
+<!--This is a comment-->
 
 <body class="pictures">
     <header>
