--- a/pictures.html
+++ b/pictures.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="styles/style.css" type="text/css" />
 
 </head>
-<!--This is a comment-->
 
 <body class="pictures">
     <header>
@@ -18,7 +17,7 @@
 
                 <li class="nav"><a class="a" href="index.html">Home</a></li>
                 <li class="nav"><a class="a" href="about.html">About</a></li>
-                <li class="nav"><a class="a" href="pictures.html">more</a></li>
+                <li class="nav"><a class="a" href="pictures.html">More</a></li>
                 <li id="icon" class="icon">
                     <button>
                     &#9776
