--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <ul class="navbar">
+            <ul class="navbar" id="myTopNav">
 
 
                 <li class="nav"><a class="a" href="index.html">Home</a></li>
