--- a/pictures.html
+++ b/pictures.html
@@ -12,7 +12,7 @@
 <body class="pictures">
     <header>
         <nav>
-            <ul class="navbar">
+            <ul class="navbar" id="myTopNav">
 
 
                 <li class="nav"><a class="a" href="index.html">Home</a></li>
