seperated the h1 in css

--- a/about.html
+++ b/about.html
@@ -42,12 +42,12 @@
 
 <div  class="video" >
             <div class="mySlides fade">
-                <h1>"Congratulations... You've played yourself"</h1>
+                <h1 class="h1">"Congratulations... You've played yourself"</h1>
             </div>
 </div>
 <div  class="video" >
             <div class="mySlides fade">
-                <h1>Leave no man behind. <br>One band, one sound.<br> 
+                <h1 class="h1">Leave no man behind. <br>One band, one sound.<br> 
           Improvement is always needed.</h1>
             </div>
 </div>
